# msc-thesis

./: .gitignore  Dockerfile  Makefile  README.md  cypher.txt  pyg_model_selection.db  pyproject.toml  requirements.txt  setup.cfg  spark.env
catboost_info/: catboost_training.json  learn_error.tsv  time_left.tsv
config/: conf.yaml  dataprep.yaml
docker/: Dockerfile  build-image.sh  run-container.sh
labnotes/: schemas.md
neo4j/: companies-header.csv  persons-header.csv  relationships-header.csv
notebooks/: 00-initial.ipynb  01-eda.ipynb  01-initial-eda.ipynb  01-initial-eda.py  01-ownership-eda.ipynb  02-companies-house-eda.ipynb  02-graph-eda.ipynb  02-graph-eda.py  03-offshore-leaks-eda.ipynb  03-offshore-leaks-eda.py  04-graph-processing.ipynb  04-graph-processing.py  05-neo4j-processing.ipynb  05-neo4j-processing.py  06-feature-engineering.ipynb  06-feature-engineering.py  06-network-perturbation.ipynb  06-pyg-processing.ipynb  06-pyg-processing.py  07-preprocess.ipynb  07-preprocess.py  08-generate-anoamlies.ipynb  08-generate-anomalies.ipynb  08-generate-anomalies.py  09-split-dataset.ipynb  09-split-dataset.py  10-data-validation.ipynb  10-data-validation.py  10-model-selection copy.ipynb  10-model-selection.ipynb  10-model-selection.py  10-test-notebook.ipynb  10-test-notebook.py  11-model-selection-pycaret-balanced.ipynb  11-model-selection-pycaret-balanced.py  12-model-selection-pycaret-imbalanced.ipynb  12-model-selection-pycaret-imbalanced.py  13-catboost-model.ipynb  13-catboost-model.py  13-model-evaluation-pycaret.ipynb  (+24 more)
notes/: labnotes.md  project-plan.md
reports/: classification-report-threshold-0.01.csv  classification-report-threshold-0.01.html  classification-report-threshold-0.05.csv  classification-report-threshold-0.05.html  classification-report-threshold-0.1.csv  classification-report-threshold-0.1.html  classification-report-threshold-0.5.csv  classification-report-threshold-0.5.html  model-performance-bootstrap-ci.csv  model-performance-bootstrap-ci.html  model-performance-metrics.csv  model-performance-metrics.html  pycaret-model-selection.csv  pycaret-model-selection.html  test-performance-pyg.csv  top_trials_GraphSAGE_ARCHITECTURE.csv  top_trials_GraphSAGE_WEIGHTS.csv  top_trials_KGNN_ARCHITECTURE.csv  top_trials_KGNN_WEIGHTS.csv
scripts/: build-docker.sh  create-vm.sh  download-data.sh  download-model-data.sh  exec-docker-gnn-evaluation.sh  exec-docker-optuna.sh  exec-docker.sh  launch-eval.sh  launch-experiments.sh  launch-optuna.sh  run-docker.sh  spark-install.sh  (+2 more)
(+77 files in other folders)
